[package]
authors = ["Jordan Williams <jordan@jwillikers.com>"]
description = "A soft blink effect for the onboard LED on the Adafruit Feather M0 Basic Proto"
edition = "2018"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal", "led", "blink"]
license = "GPLv3"
name = "soft_blink"
readme = "README.adoc"
repository = "https://github.com/jwillikers/soft-blink"
version = "0.1.0"

[dependencies]
panic-halt = "0.2"
panic-semihosting = "0.5"
cortex-m-semihosting = "0.3"
cortex-m = "0.6"
cortex-m-rt = "0.6.12"
embedded-hal = "0.2.3"
nb = "0.1"
micromath = "2.0.0"

[dependencies.feather_m0]
features = ["rt", "unproven"]
git = "https://github.com/atsamd-rs/atsamd"

[profile]
[profile.dev]
codegen-units = 1
debug = true
lto = true

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"
